--- a/final-todo-app-api/cloudbuild.yaml
+++ b/final-todo-app-api/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
   # Deploy to App Engine
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy', '--no-promote']
-    dir: 'todo-app'
+    dir: 'final-todo-app-api'
 
 # Access secrets from Secret Manager
 availableSecrets:
