--- a/final-todo-app/cloudbuild.yaml
+++ b/final-todo-app/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
   # Install dependencies
   - name: 'node:22'
-    dir: 'todo-app'
+    dir: 'final-todo-app'
     entrypoint: npm
     args: ['ci']
 
   # Create .env file
   - name: 'node:22'
-    dir: 'todo-app'
+    dir: 'final-todo-app'
     entrypoint: 'npm'
     args: ['run', 'create-env', '.env']
     secretEnv: ['API_KEY']
@@ -17,7 +17,7 @@ steps:
   # Deploy to App Engine
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy', '--no-promote']
-    dir: 'todo-app'
+    dir: 'final-todo-app'
 
 # Access secrets from Secret Manager
 availableSecrets:
