--- a/final-todo-app-api/cloudbuild.yaml
+++ b/final-todo-app-api/cloudbuild.yaml
@@ -1,31 +1,22 @@
-steps:
-  # Install dependencies
-  - name: 'node:22'
-    dir: 'final-todo-app-api'
-    entrypoint: npm
-    args: ['ci']
+name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args:
+    - 'run'
+    - 'deploy'
+    - '${_SERVICE_NAME}'
+    - '--image'
+    - '$_AR_HOSTNAME/$_AR_PROJECT_ID/$_AR_REPOSITORY/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+    - '--region'
+    - '${_DEPLOY_REGION}'
+    - '--platform'
+    - 'managed'
+    - '--set-secrets'
+    - 'DATABASE_URL=DATABASE_URL:latest'
+    - '--set-env-vars'
+    - 'ALLOWED_ORIGINS=${_ALLOWED_ORIGINS}'
+    - '--vpc-connector'
+    - 'cloud-run-vpc-connector'
+    - '--add-cloudsql-instances'
+    - '${_CLOUDSQL_INSTANCE}'
+    - '--allow-unauthenticated'
 
-  # Create .env file
-  - name: 'node:22'
-    dir: 'final-todo-app-api'
-    entrypoint: 'npm'
-    args: ['run', 'create-env', '.env']
-    secretEnv: ['API_KEY']
-    env:
-      - 'NEXT_PUBLIC_API_KEY=$$API_KEY'
-
-  # Deploy to App Engine
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', '--no-promote']
-    dir: 'final-todo-app-api'
-
-# Access secrets from Secret Manager
-availableSecrets:
-  secretManager:
-    - versionName: projects/${PROJECT_ID}/secrets/API_KEY/versions/latest
-      env: 'API_KEY'
-
-timeout: '1600s' 
-
-options:
-  logging: CLOUD_LOGGING_ONLY
