--- a/final-todo-app-api/cloudbuild.yaml
+++ b/final-todo-app-api/cloudbuild.yaml
@@ -15,7 +15,7 @@ name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     - '--set-env-vars'
     - 'ALLOWED_ORIGINS=${_ALLOWED_ORIGINS}'
     - '--vpc-connector'
-    - 'cloud-run-vpc-connector'
+    - 'db-connector'
     - '--add-cloudsql-instances'
     - '${_CLOUDSQL_INSTANCE}'
     - '--allow-unauthenticated'
