--- a/final-todo-app/.env
+++ b/final-todo-app/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_APP_TITLE="Todo App"
-NEXT_PUBLIC_API_BASE_URL=https://ml-gcp-training-group-1.as.r.appspot.com/
+NEXT_PUBLIC_API_BASE_URL=https://ml-gcp-training-370880871422.asia-southeast1.run.app
