--- a/final-todo-app/cloudbuild.yaml
+++ b/final-todo-app/cloudbuild.yaml
@@ -12,10 +12,10 @@ steps:
     args: ['run', 'create-env', '.env']
     secretEnv: ['API_KEY']
     env:
-      - 'NEXT_PUBLIC_API_KEY=$$API_KEY'
+      - 
+      - 'NEXT_PUBLIC_API_BASE_URL=$$API_KEY'
 
-  # Deploy to App Engine
-  - name: 'gcr.io/cloud-builders/gcloud'
+  # Deploy to App Engine 
     args: ['app', 'deploy', '--no-promote']
     dir: 'final-todo-app'
 
