--- a/final-todo-app/cloudbuild.yaml
+++ b/final-todo-app/cloudbuild.yaml
@@ -11,18 +11,12 @@ steps:
     entrypoint: 'npm'
     args: ['run', 'create-env', '.env']
     env:
-      - 
+      - 'NEXT_PUBLIC_APP_TITLE="Todo App"'
       - 'NEXT_PUBLIC_API_BASE_URL=$$API_KEY'
 
   # Deploy to App Engine 
     args: ['app', 'deploy', '--no-promote']
     dir: 'final-todo-app'
-
-# Access secrets from Secret Manager
-availableSecrets:
-  secretManager:
-    - versionName: projects/${PROJECT_ID}/secrets/API_KEY/versions/1
-      env: 'API_KEY'
 
 timeout: '1600s' 
 
